@@ -3,7 +3,7 @@ CALLSIGN: W1HKJ
 EMAIL: w1hkj@w1hkj.com
 
 AUTHOR: Stelios Bounanos
-CALLSIGN: M3RNV
+CALLSIGN: M0GLD
 EMAIL: 
 
 AUTHOR:  Leigh L Klotz, Jr
