@@ -1,0 +1,17 @@
+// @COMMENT@
+
+#ifndef VERSIONS_H
+#define VERSIONS_H
+
+#define HAVE_VERSIONS_H @HAVE_VERSIONS_H@
+
+#define COMPILE_CFG  "@COMPILE_CFG@"
+#define COMPILE_DATE "@COMPILE_DATE@"
+#define COMPILE_USER "@COMPILE_USER@"
+#define COMPILE_HOST "@COMPILE_HOST@"
+
+#define COMPILER     "@COMPILER@"
+#define CFLAGS       "@CFLAGS@"
+#define LDFLAGS      "@LDFLAGS@"
+
+#endif // VERSIONS_H
